This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_database_source_name fails with SQLite 3.7.9
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: berker.peksag Nosy List: berker.peksag
Priority: normal Keywords: patch

Created on 2018-09-19 19:36 by berker.peksag, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9426 merged berker.peksag, 2018-09-19 19:42
PR 9443 closed miss-islington, 2018-09-20 11:14
PR 9453 merged miss-islington, 2018-09-20 15:58
Messages (3)
msg325786 - (view) Author: Berker Peksag (berker.peksag) * (Python committer) Date: 2018-09-19 19:36
======================================================================
FAIL: test_database_source_name (sqlite3.test.backup.BackupTests)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/berker/projects/cpython/master/Lib/sqlite3/test/backup.py", line 144, in test_database_source_name
    self.assertIn(
AssertionError: 'unrecognized error code: 1' not found in ['SQL logic error', 'SQL logic error or missing database']

A PR is on the way.
msg325855 - (view) Author: Berker Peksag (berker.peksag) * (Python committer) Date: 2018-09-20 11:14
New changeset b10a64d117de6121ea3e79c467c4107f8f399f3d by Berker Peksag in branch 'master':
bpo-34743: Fix test_database_source_name under SQLite 3.7.9 (GH-9426)
https://github.com/python/cpython/commit/b10a64d117de6121ea3e79c467c4107f8f399f3d
msg325913 - (view) Author: Berker Peksag (berker.peksag) * (Python committer) Date: 2018-09-20 17:20
New changeset c56bbae5e92828a4c93be3b0e7a5072a31fdc587 by Berker Peksag (Miss Islington (bot)) in branch '3.7':
bpo-34743: Fix test_database_source_name under SQLite 3.7.9 (GH-9426)
https://github.com/python/cpython/commit/c56bbae5e92828a4c93be3b0e7a5072a31fdc587
History
Date User Action Args
2022-04-11 14:59:06adminsetgithub: 78924
2018-10-01 17:02:41berker.peksaglinkissue34860 superseder
2018-09-20 17:21:08berker.peksagsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-09-20 17:20:35berker.peksagsetmessages: + msg325913
2018-09-20 15:58:34miss-islingtonsetpull_requests: + pull_request8868
2018-09-20 11:14:44miss-islingtonsetpull_requests: + pull_request8858
2018-09-20 11:14:38berker.peksagsetmessages: + msg325855
2018-09-19 19:42:18berker.peksagsetkeywords: + patch
stage: needs patch -> patch review
pull_requests: + pull_request8844
2018-09-19 19:36:44berker.peksagcreate