bpo-34743: Fix test_database_source_name under SQLite 3.7.9 (GH-9426)

(cherry picked from commit b10a64d117de6121ea3e79c467c4107f8f399f3d)

Co-authored-by: Berker Peksag <berker.peksag@gmail.com>